# _SmokeWorld_rAthenaSmoke

./: .gitignore  ABRIR-SERVIDOR.bat  Dockerfile  SmokeWorld_run-server.bat  entrypoint.sh  gepeto.patch  login-server  settings.VisualStudio.json  smokeWorld.sln  src.rar
conf/: char_athena.conf  grf-files.txt  groups.yml  inter_athena.conf  inter_server.yml  login_athena.conf  map_athena.conf  maps_athena.conf  motd.txt
conf/battle/: client.conf  drops.conf  exp.conf
conf/import/: groups.yml
conf/msg_conf/: char_msg.conf  map_msg.conf  original-en-char_msg.rar  original-en-map_msg.rar
db/: map_index.txt  output_bonus.txt
db/import/: achievement_db.yml  const.yml  enchantgrade.yml  instance_db.yml  item_combos.yml  item_db.yml  item_group_db.yml  item_randomopt_group.yml  item_reform.yml  laphine_synthesis.yml  laphine_upgrade.yml  mob_db.yml  mob_skill_db.txt  refine.yml  status.yml
db/re/: item_db_etc.yml  item_db_usable.yml  item_group_db.yml  mob_db.yml  refine.yml
npc/: scripts_custom.conf
npc/custom/: barters.yml  itemmall.txt  jobmaster.txt  warper.txt
npc/custom/etc/: autopot.txt
npc/custom/quests/: hunting_missions.txt  quest_shop.txt
npc/custom/smoke/: FarmZone.txt  NAO-FUNCIONAsantuarioSmoke.cpp  OLD_npcFrontier.cpp  OLD_senhoraTemporal.cpp  OLD_torreDasIlusoes.cpp  OLDarenaSmoke.cpp  ORIGINALcards_collection.txt  abrirMochila.txt  adminEmundus.cpp  advCodeRedeemer.txt  allCostumesShop.cpp  areaVIP.cpp  arenaSmoke.cpp  aventureiroMestre.cpp  buff.txt  buffreset.txt  buildManager.cpp  caixaArmasFrontier.cpp  caixaCoroasFrontier.cpp  caixaRunasSmoke.cpp  caixasEspeciais.cpp  cards_collection.txt  (+45 more)
npc/re/: scripts_athena.conf
sql-files/: item_db2_re.sql  item_db_re_etc.sql  item_db_re_usable.sql  mob_db2_re.sql  mob_db_re.sql  woe_status.sql
src/char/: char-server.vcxproj
src/common/: common-minicore.vcxproj  common.vcxproj  mmo.hpp  msg_conf.hpp
src/config/: core.hpp  packets.hpp
src/login/: login-server.vcxproj
src/map/: CMakeLists.txt  achievement.hpp  clif.cpp  emundus.cpp  emundus.hpp  itemdb.cpp  itemdb.hpp  map-server-generator.vcxproj  map-server-generator.vcxproj.filters  map-server.vcxproj  map-server.vcxproj.filters  map.hpp  pc.cpp  pc.hpp  pc_groups.cpp  script.cpp  script_constants.hpp  status.cpp  status.hpp
src/tool/: csv2yaml.vcxproj  mapcache.vcxproj  yaml2sql.vcxproj  yamlupgrade.vcxproj
src/web/: web-server.vcxproj  web-server.vcxproj.filters
(+13 files in other folders)
